ingress/nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: nginx-port
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 192.168.20.1
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - name: nginx-port
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-data-volume
              subPath: nginx/nginx.conf
            - mountPath: /etc/nginx/conf.d
              name: nginx-data-volume
              subPath: nginx/servers
            - mountPath: /var/www/website
              name: nginx-data-volume
              subPath: website
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: nginx-port
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: nginx-port
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      volumes:
        - name: nginx-data-volume
          hostPath:
            path: /home/barrelmaker/git/nginx-certbot/data
            type: Directory
