ingress/prod-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Frame-Options SAMEORIGIN;
      add_header Referrer-Policy same-origin;
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Content-Type-Options nosniff;
      add_header Content-Security-Policy "frame-ancestors 'self'; default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self'; base-uri 'self'; form-action 'self';" always;
spec:
  tls:
    - hosts:
        - barrelmaker.dev
        - dotfiles.barrelmaker.dev
        - friendbot.barrelmaker.dev
        - grafana.barrelmaker.dev
        - jellyfin.barrelmaker.dev
        - motocraft.barrelmaker.dev
        - niucraft2.barrelmaker.dev
        - webcraft.barrelmaker.dev
      secretName: main-ingress-tls
  rules:
    - host: barrelmaker.dev
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: proxy
              port:
                number: 80
    - host: dotfiles.barrelmaker.dev
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: proxy
              port:
                number: 80
    - host: friendbot.barrelmaker.dev
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: friendbot
              port:
                number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  annotations:
#   cert-manager.io/cluster-issuer: "letsencrypt-prod"
#   acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Frame-Options SAMEORIGIN;
      add_header Referrer-Policy same-origin;
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Content-Type-Options nosniff;
      add_header Content-Security-Policy "default-src 'none'; manifest-src 'self'; media-src 'self'; font-src 'self' data:; img-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' https://www.gstatic.com https://www.youtube.com/iframe_api https://s.ytimg.com; worker-src 'self' blob:; connect-src 'self'; object-src 'none'; frame-ancestors 'self'; base-uri 'self'; form-action 'self';" always;
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_hide_header Access-Control-Allow-Origin;
spec:
  tls:
    - hosts:
        - jellyfin.barrelmaker.dev
      secretName: main-ingress-tls
  rules:
    - host: jellyfin.barrelmaker.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-ingress
  annotations:
#   cert-manager.io/cluster-issuer: "letsencrypt-prod"
#   acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Frame-Options SAMEORIGIN;
      add_header Referrer-Policy same-origin;
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Content-Type-Options nosniff;
      add_header Content-Security-Policy "frame-ancestors 'self'; default-src 'none'; script-src 'self' 'unsafe-inline'; connect-src 'self'; img-src 'self' data:; style-src 'self'; base-uri 'self'; form-action 'self';" always;
spec:
  tls:
    - hosts:
        - niucraft2.barrelmaker.dev
        - motocraft.barrelmaker.dev
      secretName: main-ingress-tls
  rules:
    - host: niucraft2.barrelmaker.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: niucraft2-extras
                port:
                  number: 8123
          - pathType: Prefix
            path: "/metrics"
            backend:
              service:
                name: niucraft2-extras
                port:
                  number: 9225
    - host: motocraft.barrelmaker.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: motocraft-extras
                port:
                  number: 8123
          - pathType: Prefix
            path: "/metrics"
            backend:
              service:
                name: motocraft-extras
                port:
                  number: 9225
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
#   cert-manager.io/cluster-issuer: "letsencrypt-prod"
#   acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Frame-Options SAMEORIGIN;
      add_header Referrer-Policy same-origin;
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Content-Type-Options nosniff;
      add_header Content-Security-Policy "frame-ancestors 'self'; default-src 'none'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; font-src 'self'; connect-src 'self' https://grafana.com; img-src 'self' data:; style-src 'self' 'unsafe-inline'; base-uri 'self'; form-action 'self';" always;
spec:
  tls:
    - hosts:
        - grafana.barrelmaker.dev
      secretName: main-ingress-tls
  rules:
    - host: grafana.barrelmaker.dev
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: proxy
              port:
                number: 80
